--- a/dbfinal/header.html
+++ b/dbfinal/header.html
@@ -13,7 +13,7 @@
 </nav>
 
 <style>
-    .navbar-right-set {
-        
+    .navbar-right-set li a{
+        color: #CCC !important;
     }
 </style>
