--- a/dbfinal/login.html
+++ b/dbfinal/login.html
@@ -3,9 +3,6 @@
 	<script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<style>
-		body {
-			padding-top: 90px;
-		}
 		.panel-login {
 			border-color: #ccc;
 			-webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -150,7 +147,7 @@
 
 		function auth(a, b) {
 			if(a == b) {
-				alert("allow");
+				window.location.href = "index.html";
 			} else {
 				alert("deny");
 			}
@@ -175,11 +172,18 @@
 		});
 		
 	</script>
+    <script>
+        $(document).ready(function(){ $('.header').load("header.html"); });
+        $(document).ready(function(){ $('.footer').load("footer.html"); });
+    </script>
 </head>
 <body>
-<div class="container">
+<!-- Header: Navbar -->
+<div class="header"></div>
+
+<div class="container" style="padding-top: 70px;">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+		<div class="col-md-8 col-md-offset-1">
 			<div class="panel panel-login">
 				<div class="panel-heading">
 					<div class="row">
@@ -195,7 +199,7 @@
 				<div class="panel-body">
 					<div class="row">
 						<div class="col-lg-12">
-							<form id="login-form" method="post" role="form" style="display: block;">
+							<form id="login-form" method="post" role="form" style="display: block;" action="http://localhost:8888/dbfinal/index.html" >
 								<div class="form-group">
 									<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 								</div>
@@ -237,15 +241,6 @@
 									<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 								</div>
 								<div class="form-group">
-									<input type="text" name="nickname" id="nickname" tabindex="3" class="form-control" placeholder="Nickname" value="">
-								</div>
-								<div class="form-group">
-									<input type="text" name="school" id="school" tabindex="4" class="form-control" placeholder="School" value="">
-								</div>
-								<div class="form-group">
-									<input type="text" name="company" id="company" tabindex="5" class="form-control" placeholder="Company" value="">
-								</div>
-								<div class="form-group">
 									<div class="row">
 										<div class="col-sm-6 col-sm-offset-3">
 											<input type="submit" name="register-submit" id="register-submit" tabindex="6" class="form-control btn btn-register" value="Register Now">
@@ -260,4 +255,7 @@
 		</div>
 	</div>
 </div>
+    
+<!-- Footer -->
+<div class="footer"></div>
 </body>
