--- a/dbfinal/profile.html
+++ b/dbfinal/profile.html
@@ -14,7 +14,11 @@
 <body>
 <!-- Header: Navbar -->
 <div class="header"></div>
-
+<?php
+session_start();
+$var_value = $_SESSION['username'];
+?>
+<!--<p>Your name: <?php echo $_SESSION['username'] ?></p>-->
 <!-- Body: Container -->
 <div class="container-fluid">
     <!-- ROW  -->
@@ -51,27 +55,30 @@
     $(document).ready(function(){ $('.footer').load("footer.html"); });
 </script>
 <script>
-    document.getElementById("prof").innerHTML=window.location.pathname.split('?')[1];
+//    document.getElementById("prof").innerHTML=window.location.pathname.split('?')[1];
     var data_profile;
+    var iname = "<?php echo $_SESSION['username']; ?>";
     function renderList(data) {
-        console.log(data);
-        var selection = d3.select("#prof")
+//        console.log(data);
+        var selection = d3.select("#prof").selectAll("div")
             .data(data, function (d) {
-               
-                return d.PostId;
+               console.log(d);
+                return d.UserId;
             });
         selection.enter()
+            .append("div")
             .html(function(d) {
-                return ' <div class="row"> <div class="col-xs-2"><img src='+d.Image+' class="img-circle" height="55" width="55"/></div><div class="col-xs-7"><p class="postname">' +d.UserId+ '</p></div> </div> '
+                return ' <h4 style = "color: #000">'+d.UserId+'</h4><div class="row"> <div class="col-xs-2"><img src='+d.Image+' class="img-circle" height="55" width="55"/></div><div class="col-xs-7"><p class="postname">' +d.UserId+ '</p></div> </div> '
             })
             
         selection.exit().remove();
     }
-    d3.json('http://localhost:8888/dbfinal/api/user/', function (error, data) {
+    d3.json('http://localhost:8888/dbfinal/api/user/'+iname, function (error, data) {
         data_profile = data;
+//        console.log(data_profile);
         renderList(data_profile);
     })
-    function getposts(theUrl, callbackFunction){
+    function getuser(theUrl, callbackFunction){
         $.ajax(
         {
             url: theUrl,
@@ -80,17 +87,22 @@
             accept: 'application/json',
             success: function(data)
             {  
-                console.log(data);
+//                console.log(data);
                 if(typeof callbackFunction == 'function')
                 {
                     callbackFunction.call(this, data);
                 }
-                console.log(data[0].PostId);
+//                console.log(data[0].PostId);
             }
         });
     }
-    getposts("http://localhost:8888/dbfinal/api/user/", function(data_profile){
-//        alert("allow");
+    $(document).ready(function() {
+        iname = "Yuwei2";
+        getuser("http://localhost:8888/dbfinal/api/user/" + iname, function(data){
+            tmp = data[0].UserId;
+            console.log(tmp);
+//          auth(tmp, iPassword);
+        });
     });
 </script>
 </body>
