--- a/dbfinal/index.html
+++ b/dbfinal/index.html
@@ -14,17 +14,22 @@
 <body>
 <!-- Header: Navbar -->
 <div class="header"></div>
-
-<!--<?php echo date('l, F jS, Y'); ?>-->
-<?php
+<!--
+<script language="php">
 session_start();
+echo "22";
 if(isset($_POST['login-submit'])){
     $_SESSION['username'] = trim($_POST['username']);
-//    echo "Current user is " . $_SESSION['username'];
+    echo "Current user is " . $_SESSION['username'];
 }
 $_SESSION['username'] = $var_value;
-?>
-    
+
+</script>    
+-->
+<script>
+
+</script>
+
 <!-- Body: Container -->
 <div class="container-fluid">
     <!-- ROW  -->
@@ -58,6 +63,7 @@ $_SESSION['username'] = $var_value;
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script>
+//    var id = "Yuwei2";
     $(document).ready(function(){ $('.header').load("header.html"); });
     $(document).ready(function(){ $('.footer').load("footer.html"); });
 </script>
