--- a/dbfinal/post.html
+++ b/dbfinal/post.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="This is social network html5 template available in themeforest......" />
 		<meta name="keywords" content="Social Network, Social Media, Make Friends, Newsfeed, Profile Page" />
 		<meta name="robots" content="index, follow" />
-		<title>Chatroom | Send and Receive Messages</title>
+		<title>NYU Community</title>
 
     <!-- Stylesheets
     ================================================= -->
