--- a/dbfinal/profile.html
+++ b/dbfinal/profile.html
@@ -79,7 +79,7 @@ $var_value = $_SESSION['username'];
         selection.enter()
             .append("div")
             .html(function(d) {
-                return ' <h4 style = "color: #000">'+d.UserId+'</h4><div class="row"> <div class="col-xs-2"><img src='+d.Image+' class="img-circle" height="55" width="55"/></div><div class="col-xs-7"><p>Age: ' +d.Age+ '</p><p>Email Address: ' +d.Email+ '</p></div><div class="col-xs-3"><a onclick="myEditProf()">Edit profile</a></div> </div> '
+                return ' <h4 style = "color: #000">'+d.UserId+'</h4><div class="row"> <div class="col-xs-2"><img src='+d.Image+' class="img-circle" height="55" width="55"/></div><div class="col-xs-7"><p>Age: ' +d.Age+ '</p><p>Email Address: ' +d.Email+ '</p></div><div class="col-xs-3 hovereffect"><a onclick="myEditProf()">Edit profile</a></div> </div> '
             })
             
         selection.exit().remove();
@@ -126,7 +126,9 @@ $var_value = $_SESSION['username'];
     }
 </script>
 <style>
-    
+    .hovereffect a:hover{
+        cursor: pointer;
+    }
 </style>
 </body>
 </html>
