--- a/dbfinal/header.html
+++ b/dbfinal/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" onclick="myIndex()">NYU Community</a>
         </div>
