--- a/dbfinal/login.html
+++ b/dbfinal/login.html
@@ -178,7 +178,7 @@
 					tmp = data[0].Password;
 					auth(tmp, iPassword);
 				});
-				console.log(data);
+//				console.log(data);
 			});
 		});
 		
